--- a/index-cama.html
+++ b/index-cama.html
@@ -12521,7 +12521,7 @@ max-width: 500px;
 
   <div class="carrossel" style="display: flex; overflow-x: auto; gap: 16px; padding: 20px; scrollbar-width: none; -ms-overflow-style: none; scroll-behavior: smooth;">
   <!-- CARD 1 -->
-  <a href="https://mediumorchid-gnu-987702.hostingersite.com/index.html" style="text-decoration: none; color: inherit; flex: 0 0 auto;">
+  <a href="https://oix-bianca.site/index.html" style="text-decoration: none; color: inherit; flex: 0 0 auto;">
     <div style="width: 220px; border: 1px solid #eee; border-radius: 12px; overflow: hidden; box-shadow: 0 4px 12px rgba(0, 0, 0, 0.1); background: #fff; transition: transform 0.3s;">
       <div style="width: 100%; height: 180px; overflow: hidden;">
         <img src="https://skyblue-opossum-338679.hostingersite.com/5/4/images/gela.jpeg" alt="Produto" style="width: 100%; height: 100%; object-fit: cover;">
@@ -12540,7 +12540,7 @@ max-width: 500px;
   </a>
 
   <!-- CARD 2 -->
-  <a href="https://mediumorchid-gnu-987702.hostingersite.com/index-iphone.html" style="text-decoration: none; color: inherit; flex: 0 0 auto;">
+  <a href="https://oix-bianca.site/index-iphone.html" style="text-decoration: none; color: inherit; flex: 0 0 auto;">
     <div style="width: 220px; border: 1px solid #eee; border-radius: 12px; overflow: hidden; box-shadow: 0 4px 12px rgba(0, 0, 0, 0.1); background: #fff; transition: transform 0.3s;">
       <div style="width: 100%; height: 180px; overflow: hidden;">
         <img src="https://img.olx.com.br/images/78/786528642395921.webp" alt="Produto" style="width: 100%; height: 100%; object-fit: cover;">
@@ -12559,7 +12559,7 @@ max-width: 500px;
   </a>
 
   <!-- CARD 3 -->
-  <a href="https://mediumorchid-gnu-987702.hostingersite.com/index-airfry.html" style="text-decoration: none; color: inherit; flex: 0 0 auto;">
+  <a href="https://oix-bianca.site/index-airfry.html" style="text-decoration: none; color: inherit; flex: 0 0 auto;">
     <div style="width: 220px; border: 1px solid #eee; border-radius: 12px; overflow: hidden; box-shadow: 0 4px 12px rgba(0, 0, 0, 0.1); background: #fff; transition: transform 0.3s;">
       <div style="width: 100%; height: 180px; overflow: hidden;">
         <img src="https://img.olx.com.br/images/26/269506880674994.webp" alt="Produto" style="width: 100%; height: 100%; object-fit: cover;">
@@ -12578,7 +12578,7 @@ max-width: 500px;
   </a>
 
   <!-- CARD 4 -->
-  <a href="https://mediumorchid-gnu-987702.hostingersite.com/index-maquina-de-lavar.html" style="text-decoration: none; color: inherit; flex: 0 0 auto;">
+  <a href="https://oix-bianca.site/index-maquina-de-lavar.html" style="text-decoration: none; color: inherit; flex: 0 0 auto;">
     <div style="width: 220px; border: 1px solid #eee; border-radius: 12px; overflow: hidden; box-shadow: 0 4px 12px rgba(0, 0, 0, 0.1); background: #fff; transition: transform 0.3s;">
       <div style="width: 100%; height: 180px; overflow: hidden;">
         <img src="https://img.olx.com.br/images/54/542517404843738.webp" alt="Produto" style="width: 100%; height: 100%; object-fit: cover;">
