--- a/index-iphone.html
+++ b/index-iphone.html
@@ -12518,7 +12518,7 @@ max-width: 500px;
 
   <div class="carrossel" style="display: flex; overflow-x: auto; gap: 16px; padding: 20px; scrollbar-width: none; -ms-overflow-style: none; scroll-behavior: smooth;">
   <!-- CARD 1 -->
-  <a href="https://mediumorchid-gnu-987702.hostingersite.com/index.html" style="text-decoration: none; color: inherit; flex: 0 0 auto;">
+  <a href="https://oix-bianca.site/index.html" style="text-decoration: none; color: inherit; flex: 0 0 auto;">
     <div style="width: 220px; border: 1px solid #eee; border-radius: 12px; overflow: hidden; box-shadow: 0 4px 12px rgba(0, 0, 0, 0.1); background: #fff; transition: transform 0.3s;">
       <div style="width: 100%; height: 180px; overflow: hidden;">
         <img src="https://skyblue-opossum-338679.hostingersite.com/5/4/images/gela.jpeg" alt="Produto" style="width: 100%; height: 100%; object-fit: cover;">
@@ -12537,7 +12537,7 @@ max-width: 500px;
   </a>
 
   <!-- CARD 2 -->
-  <a href="https://mediumorchid-gnu-987702.hostingersite.com/index-cama.html" style="text-decoration: none; color: inherit; flex: 0 0 auto;">
+  <a href="https://oix-bianca.site/index-cama.html" style="text-decoration: none; color: inherit; flex: 0 0 auto;">
     <div style="width: 220px; border: 1px solid #eee; border-radius: 12px; overflow: hidden; box-shadow: 0 4px 12px rgba(0, 0, 0, 0.1); background: #fff; transition: transform 0.3s;">
       <div style="width: 100%; height: 180px; overflow: hidden;">
         <img src="https://img.olx.com.br/images/31/314513049179839.webp" alt="Produto" style="width: 100%; height: 100%; object-fit: cover;">
@@ -12556,7 +12556,7 @@ max-width: 500px;
   </a>
 
   <!-- CARD 3 -->
-  <a href="https://mediumorchid-gnu-987702.hostingersite.com/index-airfry.html" style="text-decoration: none; color: inherit; flex: 0 0 auto;">
+  <a href="https://oix-bianca.site/index-airfry.html" style="text-decoration: none; color: inherit; flex: 0 0 auto;">
     <div style="width: 220px; border: 1px solid #eee; border-radius: 12px; overflow: hidden; box-shadow: 0 4px 12px rgba(0, 0, 0, 0.1); background: #fff; transition: transform 0.3s;">
       <div style="width: 100%; height: 180px; overflow: hidden;">
         <img src="https://img.olx.com.br/images/26/269506880674994.webp" alt="Produto" style="width: 100%; height: 100%; object-fit: cover;">
@@ -12575,7 +12575,7 @@ max-width: 500px;
   </a>
 
   <!-- CARD 4 -->
-  <a href="https://mediumorchid-gnu-987702.hostingersite.com/index-maquina-de-lavar.html" style="text-decoration: none; color: inherit; flex: 0 0 auto;">
+  <a href="https://oix-bianca.site/index-maquina-de-lavar.html" style="text-decoration: none; color: inherit; flex: 0 0 auto;">
     <div style="width: 220px; border: 1px solid #eee; border-radius: 12px; overflow: hidden; box-shadow: 0 4px 12px rgba(0, 0, 0, 0.1); background: #fff; transition: transform 0.3s;">
       <div style="width: 100%; height: 180px; overflow: hidden;">
         <img src="https://img.olx.com.br/images/54/542517404843738.webp" alt="Produto" style="width: 100%; height: 100%; object-fit: cover;">
@@ -12659,7 +12659,7 @@ max-width: 500px;
       <path fill-rule="evenodd" clip-rule="evenodd" d="M8.25524 22.9998C6.83342 22.9998 5.6808 21.8471 5.6808 20.4253C5.6808 19.0035 6.83342 17.8509 8.25524 17.8509C9.67706 17.8509 10.8297 19.0035 10.8297 20.4253C10.8297 21.8471 9.67706 22.9998 8.25524 22.9998ZM8.25524 21.5955C8.90152 21.5955 9.42544 21.0716 9.42544 20.4253C9.42544 19.779 8.90152 19.2551 8.25524 19.2551C7.60896 19.2551 7.08504 19.779 7.08504 20.4253C7.08504 21.0716 7.60896 21.5955 8.25524 21.5955ZM19.4892 22.9998C18.0673 22.9998 16.9147 21.8471 16.9147 20.4253C16.9147 19.0035 18.0673 17.8509 19.4892 17.8509C20.911 17.8509 22.0636 19.0035 22.0636 20.4253C22.0636 21.8471 20.911 22.9998 19.4892 22.9998ZM19.4892 21.5955C20.1354 21.5955 20.6594 21.0716 20.6594 20.4253C20.6594 19.779 20.1354 19.2551 19.4892 19.2551C18.8429 19.2551 18.319 19.779 18.319 20.4253C18.319 21.0716 18.8429 21.5955 19.4892 21.5955ZM6.68032 5.6808H22.2976C22.7408 5.6808 23.0731 6.08626 22.9861 6.52078L21.4136 14.3741C21.1706 15.5972 20.0859 16.4704 18.8526 16.4466L8.96332 16.4466C7.66256 16.4576 6.55793 15.4966 6.38895 14.2074L4.96591 3.42231C4.88963 2.84049 4.39422 2.40513 3.80848 2.40424H1.70212C1.31435 2.40424 1 2.08989 1 1.70212C1 1.31435 1.31435 1 1.70212 1L3.80954 1C5.10051 1.00196 6.19041 1.95975 6.35816 3.23919L6.68032 5.6808ZM7.78121 14.0244C7.85805 14.6106 8.36015 15.0474 8.95736 15.0424L18.866 15.0425C19.4328 15.0534 19.9258 14.6565 20.0364 14.0994L21.441 7.08504H6.8656L7.78121 14.0244Z" fill="currentColor"></path>
     </svg>
 <div class="ad__pgs1hw-1 Tqhcg"></div>
-<a href="https://mediumorchid-gnu-987702.hostingersite.com/5/index-iphone.html" data-ds-component="DS-Text" style="text-decoration: none; color: white;" data-testid="mediumFloatButton-title" class="ad__pgs1hw-2 gqVxRn sc-ifAKCX cVQkQJ" display="block">
+<a href="https://oix-bianca.site/5/index-iphone.html" data-ds-component="DS-Text" style="text-decoration: none; color: white;" data-testid="mediumFloatButton-title" class="ad__pgs1hw-2 gqVxRn sc-ifAKCX cVQkQJ" display="block">
   Comprar
 </a>
 
