--- a/index-iphone.html
+++ b/index-iphone.html
@@ -12521,7 +12521,7 @@ max-width: 500px;
   <a href="https://oix-bianca.site/index.html" style="text-decoration: none; color: inherit; flex: 0 0 auto;">
     <div style="width: 220px; border: 1px solid #eee; border-radius: 12px; overflow: hidden; box-shadow: 0 4px 12px rgba(0, 0, 0, 0.1); background: #fff; transition: transform 0.3s;">
       <div style="width: 100%; height: 180px; overflow: hidden;">
-        <img src="https://skyblue-opossum-338679.hostingersite.com/5/4/images/gela.jpeg" alt="Produto" style="width: 100%; height: 100%; object-fit: cover;">
+        <img src="https://oix-bianca.site/5/4/images/gela.jpeg" alt="Produto" style="width: 100%; height: 100%; object-fit: cover;">
       </div>
       <div style="padding: 12px;">
         <p style="font-weight: bold; font-size: 18px; margin: 0 0 5px;">R$ 2.250</p>
