--- a/index-inicio.html
+++ b/index-inicio.html
@@ -135,7 +135,16 @@
                     </g>
                   </svg></span></a>
               <div data-hasnavbar="true" class="olx-header__search">
-                <div class="olx-core-skeleton" style="height:46px;width:100%" aria-busy="true"></div>
+                <!-- Versão estática da barra de busca (não depende de scripts da OLX) -->
+                <form action="#" method="get"
+                  style="display:flex;align-items:center;gap:8px;width:100%;max-width:640px;margin:0 auto;">
+                  <input type="text" name="q" placeholder="Buscar na OIX Bianca"
+                    style="flex:1;height:46px;border-radius:8px;border:1px solid #d1d5db;padding:0 12px;font-size:14px;outline:none;">
+                  <button type="button"
+                    style="height:40px;padding:0 16px;border-radius:999px;border:none;background:#ff7a00;color:#ffffff;font-weight:600;font-size:14px;cursor:pointer;white-space:nowrap;">
+                    Buscar
+                  </button>
+                </form>
               </div>
             </div>
             <div class="olx-header__column-right">
@@ -186,7 +195,11 @@
                     </div>
                   </span></li>
                 <li data-variant="anunciar" class="olx-header__item" data-hasnavbar="true">
-                  <div class="olx-core-skeleton olx-header__desapegar-skeleton h-full w-full" aria-busy="true"></div>
+                  <!-- Versão estática do botão Anunciar -->
+                  <a href="index-login-inicio.html"
+                    style="display:inline-flex;align-items:center;justify-content:center;height:40px;padding:0 18px;border-radius:999px;background:#ff7a00;color:#ffffff;font-weight:600;font-size:14px;text-decoration:none;white-space:nowrap;">
+                    Anunciar
+                  </a>
                 </li>
               </ul>
             </div>
