fix: restaurar banner de publicidade estatico

--- a/index-inicio.html
+++ b/index-inicio.html
@@ -2357,11 +2357,18 @@
       <div class="AdvertisingSlotTopBanner_advertising-top-banner__4eKUF"
         style="--widthSlotTop:320px;--heightSlotTop:50px;--desktopWidthSlotTop:728px;--desktopHeightSlotTop:90px;--desktopLargeHeightSlotTop:90px;--desktopLargeWidthSlotTop:728px"
         data-testid="advertising-home-top-no-prebid_div" id="advertising-top-banner">
-        <div class="flex AdvertisingPlaceholder_advertising-placeholder__cS_xl">
-          <p class="typo-body-small text-neutral-110 AdvertisingPlaceholder_advertising-placeholder__text__oFXSt">
+        <div class="flex AdvertisingPlaceholder_advertising-placeholder__cS_xl"
+          style="flex-direction:column; gap:6px; align-items:center; justify-content:center; padding:8px 0;">
+          <p class="typo-body-small AdvertisingPlaceholder_advertising-placeholder__text__oFXSt"
+            style="text-transform:uppercase; letter-spacing:.08em; color:#e5e7eb;">
             publicidade</p>
           <div class="flex AdvertisingPlaceholder_advertising-placeholder__slot__RgnxY"
-            id="advertising-home-top-no-prebid" data-testid="advertising-home-top-no-prebid"></div>
+            id="advertising-home-top-no-prebid" data-testid="advertising-home-top-no-prebid"
+            style="width:100%; justify-content:center;">
+            <img src="https://assets-portal-cms.olx.com.br/1135x350_1922407229.webp"
+              alt="Banner publicitário Neutrogena - Pele 4x mais protegida"
+              style="width:100%; max-width:728px; border-radius:8px; display:block; box-shadow:0 15px 35px rgba(0,0,0,0.35);">
+          </div>
         </div>
       </div>
       <section class="Container_home-container__aomo5 DefaultGalleries_home-default-galleries__IZInv">
