--- a/index-inicio.html
+++ b/index-inicio.html
@@ -4110,6 +4110,226 @@
         </div>
       </section>
       <!-- PRODUTOS_BIANCA -->
+      <section class="HighlightsBianca" data-static-block="produtos-highlight">
+        <div class="HighlightsBianca__content">
+          <header>
+            <h2>Na OLX, você encontra os melhores preços.</h2>
+            <p>Seleção fixa de ofertas para inspirar seus clientes.</p>
+          </header>
+          <div class="HighlightsBianca__cards">
+            <article style="--card-color:#602ACB">
+              <div class="HighlightsBianca__card-figure">
+                <img src="https://static.olx.com.br/external/home/static-cards/app.webp" alt="Aplicativo OLX">
+              </div>
+              <div class="HighlightsBianca__card-text">
+                <h3>Tudo até R$100</h3>
+                <p>Itens para desapegar rápido, sem pesar no bolso.</p>
+              </div>
+            </article>
+            <article style="--card-color:#FF7A00">
+              <div class="HighlightsBianca__card-figure">
+                <img src="https://static.olx.com.br/external/home/static-cards/iphone.webp" alt="iPhone lilás">
+              </div>
+              <div class="HighlightsBianca__card-text">
+                <h3>iPhones no precinho</h3>
+                <p>Modelos revisados, prontos para uso imediato.</p>
+              </div>
+            </article>
+            <article style="--card-color:#8B5CF6">
+              <div class="HighlightsBianca__card-figure">
+                <img src="https://static.olx.com.br/external/home/static-cards/tv.webp" alt="Televisor">
+              </div>
+              <div class="HighlightsBianca__card-text">
+                <h3>TVs até R$2.000</h3>
+                <p>O entretenimento perfeito para qualquer sala.</p>
+              </div>
+            </article>
+            <article style="--card-color:#70EC7B">
+              <div class="HighlightsBianca__card-figure">
+                <img src="https://static.olx.com.br/external/home/static-cards/fridge.webp" alt="Geladeira branca">
+              </div>
+              <div class="HighlightsBianca__card-text">
+                <h3>Eletros a partir de R$500</h3>
+                <p>Geladeiras, fogões e muito mais com garantia.</p>
+              </div>
+            </article>
+            <article style="--card-color:#7C3AED">
+              <div class="HighlightsBianca__card-figure">
+                <img src="https://static.olx.com.br/external/home/static-cards/sneaker.webp" alt="Tênis Nike">
+              </div>
+              <div class="HighlightsBianca__card-text">
+                <h3>Marcas queridinhas</h3>
+                <p>Looks completos com descontos semanais.</p>
+              </div>
+            </article>
+            <article style="--card-color:#FF8C1A">
+              <div class="HighlightsBianca__card-figure">
+                <img src="https://static.olx.com.br/external/home/static-cards/tires.webp" alt="Pneus">
+              </div>
+              <div class="HighlightsBianca__card-text">
+                <h3>Autopeças com até 40% OFF</h3>
+                <p>Peças confiáveis para manter seu carro em dia.</p>
+              </div>
+            </article>
+          </div>
+        </div>
+      </section>
+
+      <section class="BenefitsBianca" data-static-block="produtos-benefits">
+        <div class="BenefitsBianca__content">
+          <div class="BenefitsBianca__text">
+            <h2>Crie sua conta OLX e aproveite todas as vantagens</h2>
+            <p>Gerencie anúncios, negocie com segurança e receba recomendações personalizadas.</p>
+          </div>
+          <div class="BenefitsBianca__grid">
+            <article>
+              <span class="BenefitsBianca__icon">💸</span>
+              <h3>Anuncie grátis</h3>
+              <p>Desapegue de produtos, autos e imóveis sem pagar taxa inicial.</p>
+            </article>
+            <article>
+              <span class="BenefitsBianca__icon">💬</span>
+              <h3>Negocie com confiança</h3>
+              <p>Use o chat OLX para conversar e fechar negócios com segurança.</p>
+            </article>
+            <article>
+              <span class="BenefitsBianca__icon">❤️</span>
+              <h3>Favoritos sempre à mão</h3>
+              <p>Salve os anúncios preferidos e receba alertas de queda de preço.</p>
+            </article>
+            <article>
+              <span class="BenefitsBianca__icon">🎯</span>
+              <h3>Recomendações inteligentes</h3>
+              <p>Receba ofertas alinhadas ao seu perfil para comprar mais rápido.</p>
+            </article>
+          </div>
+          <a class="BenefitsBianca__cta" href="#produtos-lucas-template">Criar conta gratuitamente</a>
+        </div>
+      </section>
+
+      <style id="bianca-static-sections-style">
+        .HighlightsBianca,
+        .BenefitsBianca {
+          max-width: 1200px;
+          margin: 32px auto 0;
+          padding: 0 16px;
+        }
+        .HighlightsBianca__content,
+        .BenefitsBianca__content {
+          background: #0d111a;
+          border: 1px solid rgba(255, 255, 255, 0.08);
+          border-radius: 16px;
+          padding: 28px;
+          box-shadow: 0 25px 65px rgba(0, 0, 0, 0.45);
+        }
+        .HighlightsBianca__content header {
+          display: flex;
+          flex-direction: column;
+          gap: 6px;
+          margin-bottom: 20px;
+        }
+        .HighlightsBianca__content h2,
+        .BenefitsBianca__content h2 {
+          margin: 0;
+          font-size: 24px;
+          color: #f5f6fa;
+        }
+        .HighlightsBianca__content p,
+        .BenefitsBianca__content p {
+          margin: 0;
+          color: #cfd4ff;
+        }
+        .HighlightsBianca__cards {
+          display: grid;
+          grid-template-columns: repeat(auto-fit, minmax(180px, 1fr));
+          gap: 16px;
+        }
+        .HighlightsBianca__cards article {
+          background: var(--card-color, #4c1d95);
+          border-radius: 16px;
+          padding: 14px;
+          min-height: 190px;
+          display: flex;
+          flex-direction: column;
+          justify-content: space-between;
+          color: #fff;
+          box-shadow: inset 0 0 0 1px rgba(255, 255, 255, 0.12);
+        }
+        .HighlightsBianca__card-figure {
+          display: flex;
+          align-items: center;
+          justify-content: center;
+          height: 110px;
+        }
+        .HighlightsBianca__card-figure img {
+          max-height: 100%;
+          width: auto;
+        }
+        .HighlightsBianca__card-text h3 {
+          margin: 0;
+          font-size: 16px;
+          font-weight: 700;
+        }
+        .HighlightsBianca__card-text p {
+          margin: 4px 0 0;
+          font-size: 13px;
+          color: #f8fafc;
+          opacity: 0.9;
+        }
+        .BenefitsBianca__content {
+          margin-top: 32px;
+        }
+        .BenefitsBianca__text {
+          margin-bottom: 20px;
+        }
+        .BenefitsBianca__grid {
+          display: grid;
+          grid-template-columns: repeat(auto-fit, minmax(220px, 1fr));
+          gap: 16px;
+        }
+        .BenefitsBianca__grid article {
+          background: #111827;
+          border-radius: 14px;
+          padding: 18px;
+          border: 1px solid rgba(255, 255, 255, 0.06);
+          display: flex;
+          flex-direction: column;
+          gap: 8px;
+          color: #e5e7eb;
+        }
+        .BenefitsBianca__icon {
+          width: 40px;
+          height: 40px;
+          border-radius: 50%;
+          background: rgba(255, 255, 255, 0.08);
+          display: inline-flex;
+          align-items: center;
+          justify-content: center;
+          font-size: 20px;
+        }
+        .BenefitsBianca__cta {
+          display: inline-flex;
+          margin-top: 24px;
+          align-items: center;
+          justify-content: center;
+          padding: 12px 28px;
+          border-radius: 999px;
+          background: linear-gradient(120deg, #ff7a00, #f97316);
+          color: #fff;
+          font-weight: 600;
+          text-decoration: none;
+          box-shadow: 0 12px 35px rgba(249, 115, 22, 0.35);
+        }
+        @media (max-width: 768px) {
+          .HighlightsBianca__content,
+          .BenefitsBianca__content {
+            padding: 20px;
+          }
+          .HighlightsBianca__cards {
+            grid-template-columns: repeat(auto-fit, minmax(140px, 1fr));
+          }
+        }
+      </style>
     </main>
     <footer class="olx-seo-footer" id="footer" data-ds-component="DS-Footer">
       <div class="olx-tabs" data-ds-component="DS-Tabs">
