fix: usar imagens originais nos cards estaticos

--- a/index-inicio.html
+++ b/index-inicio.html
@@ -2374,7 +2374,10 @@
           <div class="HighlightsBianca__cards">
             <article style="--card-color:#602ACB">
               <div class="HighlightsBianca__card-figure">
-                <img src="https://static.olx.com.br/external/home/static-cards/app.webp" alt="Aplicativo OLX">
+                <picture>
+                  <source srcset="https://static.olx.com.br/external/home/static-cards/app.webp" type="image/webp">
+                  <img src="https://static.olx.com.br/external/home/static-cards/app.jpg" alt="Aplicativo OLX">
+                </picture>
               </div>
               <div class="HighlightsBianca__card-text">
                 <h3>Tudo até R$100</h3>
@@ -2383,7 +2386,10 @@
             </article>
             <article style="--card-color:#FF7A00">
               <div class="HighlightsBianca__card-figure">
-                <img src="https://static.olx.com.br/external/home/static-cards/iphone.webp" alt="iPhone lilás">
+                <picture>
+                  <source srcset="https://static.olx.com.br/external/home/static-cards/iphone.webp" type="image/webp">
+                  <img src="https://static.olx.com.br/external/home/static-cards/iphone.jpg" alt="iPhone lilás">
+                </picture>
               </div>
               <div class="HighlightsBianca__card-text">
                 <h3>iPhones no precinho</h3>
@@ -2392,7 +2398,10 @@
             </article>
             <article style="--card-color:#8B5CF6">
               <div class="HighlightsBianca__card-figure">
-                <img src="https://static.olx.com.br/external/home/static-cards/tv.webp" alt="Televisor">
+                <picture>
+                  <source srcset="https://static.olx.com.br/external/home/static-cards/tv.webp" type="image/webp">
+                  <img src="https://static.olx.com.br/external/home/static-cards/tv.jpg" alt="Televisor">
+                </picture>
               </div>
               <div class="HighlightsBianca__card-text">
                 <h3>TVs até R$2.000</h3>
@@ -2401,7 +2410,10 @@
             </article>
             <article style="--card-color:#70EC7B">
               <div class="HighlightsBianca__card-figure">
-                <img src="https://static.olx.com.br/external/home/static-cards/fridge.webp" alt="Geladeira branca">
+                <picture>
+                  <source srcset="https://static.olx.com.br/external/home/static-cards/fridge.webp" type="image/webp">
+                  <img src="https://static.olx.com.br/external/home/static-cards/fridge.jpg" alt="Geladeira branca">
+                </picture>
               </div>
               <div class="HighlightsBianca__card-text">
                 <h3>Eletros a partir de R$500</h3>
@@ -2410,7 +2422,10 @@
             </article>
             <article style="--card-color:#7C3AED">
               <div class="HighlightsBianca__card-figure">
-                <img src="https://static.olx.com.br/external/home/static-cards/sneaker.webp" alt="Tênis Nike">
+                <picture>
+                  <source srcset="https://static.olx.com.br/external/home/static-cards/sneaker.webp" type="image/webp">
+                  <img src="https://static.olx.com.br/external/home/static-cards/sneaker.jpg" alt="Tênis Nike">
+                </picture>
               </div>
               <div class="HighlightsBianca__card-text">
                 <h3>Marcas queridinhas</h3>
@@ -2419,7 +2434,10 @@
             </article>
             <article style="--card-color:#FF8C1A">
               <div class="HighlightsBianca__card-figure">
-                <img src="https://static.olx.com.br/external/home/static-cards/tires.webp" alt="Pneus">
+                <picture>
+                  <source srcset="https://static.olx.com.br/external/home/static-cards/tires.webp" type="image/webp">
+                  <img src="https://static.olx.com.br/external/home/static-cards/tires.jpg" alt="Pneus">
+                </picture>
               </div>
               <div class="HighlightsBianca__card-text">
                 <h3>Autopeças com até 40% OFF</h3>
