--- a/index-inicio.html
+++ b/index-inicio.html
@@ -2374,10 +2374,7 @@
           <div class="HighlightsBianca__cards">
             <article style="--card-color:#602ACB">
               <div class="HighlightsBianca__card-figure">
-                <picture>
-                  <source srcset="https://static.olx.com.br/external/home/static-cards/app.webp" type="image/webp">
-                  <img src="https://static.olx.com.br/external/home/static-cards/app.jpg" alt="Aplicativo OLX">
-                </picture>
+                <img src="assets/img/static-cards/app.jpg" alt="Aplicativo OLX" loading="lazy">
               </div>
               <div class="HighlightsBianca__card-text">
                 <h3>Tudo até R$100</h3>
@@ -2386,10 +2383,7 @@
             </article>
             <article style="--card-color:#FF7A00">
               <div class="HighlightsBianca__card-figure">
-                <picture>
-                  <source srcset="https://static.olx.com.br/external/home/static-cards/iphone.webp" type="image/webp">
-                  <img src="https://static.olx.com.br/external/home/static-cards/iphone.jpg" alt="iPhone lilás">
-                </picture>
+                <img src="assets/img/static-cards/iphone.jpg" alt="iPhone lilás" loading="lazy">
               </div>
               <div class="HighlightsBianca__card-text">
                 <h3>iPhones no precinho</h3>
@@ -2398,10 +2392,7 @@
             </article>
             <article style="--card-color:#8B5CF6">
               <div class="HighlightsBianca__card-figure">
-                <picture>
-                  <source srcset="https://static.olx.com.br/external/home/static-cards/tv.webp" type="image/webp">
-                  <img src="https://static.olx.com.br/external/home/static-cards/tv.jpg" alt="Televisor">
-                </picture>
+                <img src="assets/img/static-cards/tv.jpg" alt="Televisor" loading="lazy">
               </div>
               <div class="HighlightsBianca__card-text">
                 <h3>TVs até R$2.000</h3>
@@ -2410,10 +2401,7 @@
             </article>
             <article style="--card-color:#70EC7B">
               <div class="HighlightsBianca__card-figure">
-                <picture>
-                  <source srcset="https://static.olx.com.br/external/home/static-cards/fridge.webp" type="image/webp">
-                  <img src="https://static.olx.com.br/external/home/static-cards/fridge.jpg" alt="Geladeira branca">
-                </picture>
+                <img src="assets/img/static-cards/fridge.jpg" alt="Geladeira branca" loading="lazy">
               </div>
               <div class="HighlightsBianca__card-text">
                 <h3>Eletros a partir de R$500</h3>
@@ -2422,10 +2410,7 @@
             </article>
             <article style="--card-color:#7C3AED">
               <div class="HighlightsBianca__card-figure">
-                <picture>
-                  <source srcset="https://static.olx.com.br/external/home/static-cards/sneaker.webp" type="image/webp">
-                  <img src="https://static.olx.com.br/external/home/static-cards/sneaker.jpg" alt="Tênis Nike">
-                </picture>
+                <img src="assets/img/static-cards/sneaker.jpg" alt="Tênis Nike" loading="lazy">
               </div>
               <div class="HighlightsBianca__card-text">
                 <h3>Marcas queridinhas</h3>
@@ -2434,10 +2419,7 @@
             </article>
             <article style="--card-color:#FF8C1A">
               <div class="HighlightsBianca__card-figure">
-                <picture>
-                  <source srcset="https://static.olx.com.br/external/home/static-cards/tires.webp" type="image/webp">
-                  <img src="https://static.olx.com.br/external/home/static-cards/tires.jpg" alt="Pneus">
-                </picture>
+                <img src="assets/img/static-cards/tires.jpg" alt="Pneus" loading="lazy">
               </div>
               <div class="HighlightsBianca__card-text">
                 <h3>Autopeças com até 40% OFF</h3>
@@ -4275,14 +4257,17 @@
           box-shadow: inset 0 0 0 1px rgba(255, 255, 255, 0.12);
         }
         .HighlightsBianca__card-figure {
-          display: flex;
-          align-items: center;
-          justify-content: center;
-          height: 110px;
+          display: block;
+          height: 150px;
+          border-radius: 12px;
+          overflow: hidden;
+          box-shadow: inset 0 0 0 1px rgba(255, 255, 255, 0.08);
         }
         .HighlightsBianca__card-figure img {
-          max-height: 100%;
-          width: auto;
+          width: 100%;
+          height: 100%;
+          object-fit: cover;
+          display: block;
         }
         .HighlightsBianca__card-text h3 {
           margin: 0;
