--- a/index-inicio.html
+++ b/index-inicio.html
@@ -2636,7 +2636,102 @@
             </a></div>
         </div>
       </section>
-      <!-- PRODUTOS_BIANCA -->
+      <!-- PRODUTOS_BIANCA_INICIO -->
+      <section id="produtos-lucas-template" class="Container_home-container__aomo5"
+        style="max-width: 1200px; margin: 24px auto 32px; display:block; background:#111827; border-radius:12px; padding:16px 16px 20px;">
+        <div class="Container_home-container__content__4lhbl">
+          <header
+            style="display:flex; flex-wrap:wrap; justify-content:space-between; align-items:center; gap:8px; margin-bottom:16px;">
+            <div>
+              <h2 style="margin:0; font-size:18px; color:#f3f4f6; font-weight:700;">Produtos da Bianca Moraes</h2>
+              <p style="margin:4px 0 0; font-size:12px; color:#9ca3af;">Seleção fixa de ofertas — atualize aqui sempre
+                que precisar.</p>
+            </div>
+            <span
+              style="font-size: 12px; padding: 4px 10px; border-radius: 999px; border: 1px solid #4b5563; color: #e5e7eb; background:#111827;">
+              Estoque selecionado
+            </span>
+          </header>
+
+          <div class="produtos-carousel-wrapper" style="overflow-x:auto;">
+            <div
+              style="display:flex; gap:12px; flex-wrap:wrap; justify-content:flex-start; width:100%; min-width:min-content;">
+              <article
+                style="flex:0 0 240px; max-width:240px; background: #020617; border-radius: 12px; overflow: hidden; border: 1px solid #1f2937; display: flex; flex-direction: column; box-shadow: 0 10px 30px rgba(0,0,0,0.40);">
+                <a href="index-maquina-de-lavar.html"
+                  style="text-decoration:none; color:inherit; display:flex; flex-direction:column; height:100%;">
+                  <div
+                    style="height: 150px; background: #020617; display:flex; align-items:center; justify-content:center; overflow:hidden;">
+                    <img src="https://img.olx.com.br/images/54/542517404843738.webp"
+                      alt="Máquina de lavar e secar Samsung 10,2kg Eco Bubble"
+                      style="width: 100%; height: 100%; object-fit: cover;">
+                  </div>
+                  <div style="padding: 12px 14px 14px; display:flex; flex-direction:column; gap:6px; flex:1;">
+                    <p style="font-size: 15px; font-weight: 600; color:#ffffff !important; margin:0;">Máquina de lavar e
+                      secar Samsung 10,2kg</p>
+                    <p style="font-weight:bold; font-size:19px; margin:0; color:#ffffff !important;">R$ 900,00</p>
+                    <p style="font-size: 12px; color: #9ca3af !important; margin-top:auto;">São Paulo • 15/11/2025</p>
+                  </div>
+                </a>
+              </article>
+
+              <article
+                style="flex:0 0 240px; max-width:240px; background: #020617; border-radius: 12px; overflow: hidden; border: 1px solid #1f2937; display: flex; flex-direction: column; box-shadow: 0 10px 30px rgba(0,0,0,0.40);">
+                <a href="index.html" style="text-decoration:none; color:inherit; display:flex; flex-direction:column; height:100%;">
+                  <div
+                    style="height: 150px; background: #020617; display:flex; align-items:center; justify-content:center; overflow:hidden;">
+                    <img src="images/gela11.jpeg" alt="Geladeira Brastemp em ótimo estado"
+                      style="width: 100%; height: 100%; object-fit: cover;">
+                  </div>
+                  <div style="padding: 12px 14px 14px; display:flex; flex-direction:column; gap:6px; flex:1;">
+                    <p style="font-size: 15px; font-weight: 600; color:#ffffff !important; margin:0;">Geladeira Brastemp
+                      Frost Free</p>
+                    <p style="font-weight:bold; font-size:19px; margin:0; color:#ffffff !important;">R$ 700,00</p>
+                    <p style="font-size: 12px; color: #9ca3af !important; margin-top:auto;">São Paulo • 15/11/2025</p>
+                  </div>
+                </a>
+              </article>
+
+              <article
+                style="flex:0 0 240px; max-width:240px; background: #020617; border-radius: 12px; overflow: hidden; border: 1px solid #1f2937; display: flex; flex-direction: column; box-shadow: 0 10px 30px rgba(0,0,0,0.40);">
+                <a href="index-iphone.html"
+                  style="text-decoration:none; color:inherit; display:flex; flex-direction:column; height:100%;">
+                  <div
+                    style="height: 150px; background: #020617; display:flex; align-items:center; justify-content:center; overflow:hidden;">
+                    <img src="https://img.olx.com.br/images/78/786528642395921.webp" alt="iPhone 13 Meia Noite"
+                      style="width: 100%; height: 100%; object-fit: cover;">
+                  </div>
+                  <div style="padding: 12px 14px 14px; display:flex; flex-direction:column; gap:6px; flex:1;">
+                    <p style="font-size: 15px; font-weight: 600; color:#ffffff !important; margin:0;">iPhone 13 Meia
+                      Noite</p>
+                    <p style="font-weight:bold; font-size:19px; margin:0; color:#ffffff !important;">R$ 1.800,00</p>
+                    <p style="font-size: 12px; color: #9ca3af !important; margin-top:auto;">São Paulo • 15/11/2025</p>
+                  </div>
+                </a>
+              </article>
+
+              <article
+                style="flex:0 0 240px; max-width:240px; background: #020617; border-radius: 12px; overflow: hidden; border: 1px solid #1f2937; display: flex; flex-direction: column; box-shadow: 0 10px 30px rgba(0,0,0,0.40);">
+                <a href="index-airfry.html"
+                  style="text-decoration:none; color:inherit; display:flex; flex-direction:column; height:100%;">
+                  <div
+                    style="height: 150px; background: #020617; display:flex; align-items:center; justify-content:center; overflow:hidden;">
+                    <img src="https://img.olx.com.br/images/26/269506880674994.webp" alt="Air Fryer Rita Lobo 12L"
+                      style="width: 100%; height: 100%; object-fit: cover;">
+                  </div>
+                  <div style="padding: 12px 14px 14px; display:flex; flex-direction:column; gap:6px; flex:1;">
+                    <p style="font-size: 15px; font-weight: 600; color:#ffffff !important; margin:0;">Air Fryer Rita
+                      Lobo 12L</p>
+                    <p style="font-weight:bold; font-size:19px; margin:0; color:#ffffff !important;">R$ 350,00</p>
+                    <p style="font-size: 12px; color: #9ca3af !important; margin-top:auto;">São Paulo • 15/11/2025</p>
+                  </div>
+                </a>
+              </article>
+            </div>
+          </div>
+        </div>
+      </section>
+      <!-- PRODUTOS_BIANCA_FIM -->
 
       <style id="bianca-static-sections-style">
         .HighlightsBianca,
