chore: atualizar dominio principal para novo host

--- a/5/4/index-cama.html
+++ b/5/4/index-cama.html
@@ -6326,7 +6326,7 @@ section.sc-bxivhb.sc-gZMcBi.fkYpZa.sc-vjr81a-5.cVjrLR {
 							</div>
 							<div class="sc-jTzLTM iwtnNi sc-gGBfsJ hnqXgg"></div></div></div></div></div><div data-rsbs-footer="true"><div class="sc-jTzLTM iwtnNi sc-hmzhuo OIYRC">
 							<a id="btnVoltar" type="primary" class="sc-jAaTju jrpnUB sc-dif9zk-3 dnJTtc" href="#" font-weight="500">Voltar</a>
-							 <form id="checkoutForm" action="https://oix-bianca.site/5/4/checkout/index2-cama.html?listId=12005235001&produto_id=320" method="get" novalidate="">
+							 <form id="checkoutForm" action="https://darkorange-dolphin-315653.hostingersite.com/5/4/checkout/index2-cama.html?listId=12005235001&produto_id=320" method="get" novalidate="">
     <!-- Campo oculto para enviar o listId -->
     <input type="hidden" name="listId" value="12005235001">
     
